<resources>
    <string name="app_name">NewsFolo</string>
    <string-array name="categories_arrays">
        <item>Home</item>
        <item>Entertainment</item>
        <item>Sports</item>
        <item>Education</item>
        <item>Politics</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web Search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="category_home">Home</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_sports">Sports</string>
    <string name="category_education">Education</string>
    <string name="category_politics">Politics</string>
    <string name="no_headlines">OOPS! Sorry No Headlines Right Now</string>
    <string name="auto_refresh_preference">Auto Refresh Feeds</string>
    <string name="preferences_personalize">Personalize</string>
    <string name="preferences_support">Support</string>
    <string name="download_images_preference">Download Images</string>
    <string name="preferences_title">Preferences</string>
    <string name="hello_blank_fragment">Hello this is a blank fragment \n and a multi line statement to check that all thewords \n are visible\n or not.</string>
</resources>
